Ignore shipping options if requestShipping=false

BUG=656911

Review-Url: https://chromiumcodereview.appspot.com/2439543002
Cr-Commit-Position: refs/heads/master@{#426534}

Former-commit-id: 517454fce947d0e2837499a99f2205322d2462a6